<resources>
    <string name="app_name">Beeline</string>
    <string name="facebook_app_id">1840650169531250</string>
    <string name="app_title">beeline</string>
    <string name="tag_line">Direct path to highest mutual attraction.</string>
    <string name="login_button_label">Log in with Facebook</string>
    <string name="background_content_description">Background texture</string>
    <string name="facebook_login_canceled">Facebook login was cancelled.</string>
    <string name="facebook_login_failed_toast">Something unexpected went wrong with the Facebook login.</string>
    <string name="facebook_login_no_connection_toast">Facebook login failed due to a lack of connection. Restore the connection and try again.</string>
    <string name="getting_started_button">Get started</string>
    <string name="rate_users_title">Pick the one you like better</string>
    <string name="rate_users_body">
        Help the algorithm determine your unique dating preferences.
    </string>
    <string name="rate_users_graphic_content_description">
        Illustration that depicts two profiles shown side by side and suggests the user to pick the
        preferred one.
    </string>
    <string name="get_matched_title">Get matched for maximum mutual attraction</string>
    <string name="get_matched_body">
        Tired of hundreds of matches that go nowhere? Based on your ranking, we know exactly who
        is into you.
    </string>
    <string name="get_matched_content_description">
        Illustration that depicts dating matches.
    </string>
    <string name="start_a_conversation_title">Start a small number of high quality conversations</string>
    <string name="start_a_conversation_body">
        Through mutual ranking, you will have much higher quality prospects. Everyone is
        limited to contact only the 10 best matches daily. Start a genuine conversation now!
    </string>
    <string name="start_a_conversation_content_description">
        A diagram that shows message bubbles.
    </string>
    <string name="crop_photo_activity_title">Crop</string>
    <string name="delete_button_label">Delete</string>
    <string name="cancel_button_label">Cancel</string>
    <string name="select_profile_photo_chooser">Select profile photo</string>
    <string name="crop_failure_toast">Something went wrong cropping the image.</string>
    <string name="age_separator">,\u0020</string>
    <string name="profile_info">Profile Info</string>
    <string name="deactivate_account_link">Deactivate account</string>
    <string name="edit_profile_activity_title">Edit profile text</string>
    <string name="profile_edit_text_hint">Enter a short profile</string>
    <string name="discard_button_content_description">Discard button</string>
    <string name="characterCounter">%1$d / %2$d</string>
    <string name="profile_builder_upsell">Try the profile builder</string>
    <string name="profile_builder_upsell_action">Build</string>
    <string name="distance_snippet">&#160;(%1$d miles)</string>
    <string name="choose_hint">or</string>
    <string name="first_selection_dialog_header">You tapped a profile</string>
    <string name="about_app_heading">About Beeline App</string>
    <string name="about_app_body_text">
        Compare-to-rank revolutionizes online dating. Dating is a two sided problem. You can find
        out the hard way who likes you through weeding outs tons of “hi” messages that go nowhere.
        Or you can use Beeline.
        \n
        \nWe\'ll show you two profiles, and you pick the one you feel more attracted to. The app will
        ask you to compare your favorite profile against another winning profile. Choosing the same
        profiles over others again? They’re definitely your soulmates. (Just kidding. But they are
        your top picks.)
        \n
        \nAt the same time, everyone else compares and ranks profiles. Once a day, an algorithm
        matches people for the highest mutual attraction. Think mutual super likes, not simple
        swipe-right likes.
    </string>
    <string name="about_background_heading">In-Depth</string>
    <string name="about_background_body_text">
        Tired of endless unanswered messages? Totally over those awkward “hello\'s” that go nowhere
        and ready to match with someone who really likes you back?
        \n
        \nWith Beeline, you are in control of who matches with you. Why trust an algorithm to pick
        your soulmate anyway? A computer can match two people with similar interests, but it can\'t
        determine the why behind why they do what they do. Just because they both love Daredevil
        doesn\'t necessarily mean they’re compatible.
        \n
        \nWe, on the other hand, constantly size up people and choose who we want to get to know. We
        spend our lives reading people. With Beeline, you get to keep reading people. You are the
        algorithm.
        \n
        \nSound too good to be true?
        \n
        \nA game-proof mechanism ensures that if your guy chose you, he truly picked you over
        everyone else.
        \n
        \nHere\'s how: You\'ll be shown two profiles side by side. We\'ve distilled robust
        information on each person into an easy-to-read profile. You decide whom you you\'d rather
        date: Artsy boy with a soft spot for vegan ice cream, or sexy geek who enjoys jazz shows?
        Over consecutive comparisons, you teach the app which guys you find most attractive.
        Repeatedly picking the same guy over others? He might just be your other pea in a pod.
        \n
        \nAnd get this: Guys go through the same process. They also have to choose one girl over the
        others, so there can be only a handful of girls who keep winning. (Think no swiping right on
        every girl.) Only those with the strongest mutual attraction get matched.
        \n
        \nAt this point, you have both handpicked each other. It’s not just a swiped, casual like.
        You can send each other meaningful messages assured that there is high mutual interest.
        \n
        \nSay goodbye to low-investment matches. Say hello to meaningful conversations and highest
        mutual attraction.
    </string>
    <string name="about_faq_heading">FAQ</string>
    <string name="about_faq_body_text">
        <b>Q: I find rating people demeaning.</b>\n
        A: We do, too! Beeline is not about rating people. You choose whom you’d rather meet based
        on the profiles you see. Do you prefer a snowboarder over a hobby gardener?\n
    \n
        <b>Q: What if I like both profiles?</b>\n
        A: The same profiles will come up in future match-ups. Taking all these match-ups together,
        the app will realize that you like them both very similarly.\n
    \n
        <b>Q: What if I select the wrong profile by mistake?</b>\n
        A: Don\'t worry about it. The app will match-up the profiles against other profiles later.
        The wrong tap will be recognized as an anomaly. Simply keep comparing more profiles.\n
    \n
        <b>Q: This seems like a popularity contest.</b>\n
        A: Beeline only matches you with people who really like you back, which means you are free
        to be yourself. Enjoy a relaxing night in writing poetry and listening to Coltrane? Love
        being the life of the party? You may just find a special someone who is into that, too.\n
    \n
        Another unique aspect of the app is “local peaks” in the distribution: Within certain
        subgroups different people win the popularity contest. Say if you are a skateboarding punk,
        you are likely attracted to people inside of that group. If you love hiking and nature, you
        are likely attracted to people inside of that group. Beeline helps you find your people.\n
    \n
        <b>Q: Why am I not getting matched with the people that I select?</b>\n
        A: With Beeline, we cut to the chase: you only get matched with people who really like you
        back.\n
    \n
        <b>Q: I don’t have anybody to compare!</b>\n
        A: Beeline is a brand new app with an innovative and superior approach, but enough users
        have to give us a chance to get this off the ground. If you don’t have anyone to match, it
        means you are the first person in your area. Help us out: tell your single friends about
        Beeline!\n
    \n
        <b>Q: How can I close my account?</b>\n
        A: This is a brand new app, and we are still adding more features. Go to your profile and
        look in the lower right hand corner for a link to deactivate your account.
    </string>
    <string name="about_feedback_heading">Send Us Feedback!</string>
    <string name="about_feedback_body_text">
        I\'d love to hear from you. Send your feedback to
        <a href="mailto:thomas@playposse.com?subject=Feedback About Beeline Android App">thomas@playposse.com</a>.
    </string>
    <string name="about_credits_heading">Credits and copyright</string>
    <string name="about_credits_body_text">
        © 2017 Thomas Fischer\n\n
        The logo is a combination of artwork from the <a href="thenounproject.com">thenounproject.com</a>:\n
        Lion by Polina Flegontovna from the Noun Project\n
        Middle Finger by Piotrek Chuchla from the Noun Project\n
        Sad emoji by Weltenraser from the Noun Project\n
    </string>
    <string name="deactivate_account_warning">You are about to close your account.\n\nI personally read all comments. This is my baby, I try to make it better. Your feedback might help me direct my efforts to where they are most needed.</string>
    <string name="deactivate_account_reason">Reason</string>
    <string name="deactivate_account_button">Close account</string>
    <string name="deactivate_account_cancel_button">Cancel</string>
    <string name="deactivate_account_confirmation">Your account is closed.\n\nFacebook may still show this app for you. To remove it from Facebook, you have to do so on Facebook.\n\nIf you want to come back, simply start this app and sign in again.</string>
    <string name="reactivate_account_title">Re-activate Account</string>
    <string name="reactivate_account_welcome">I\'m glad to you are giving Beeline another try.\n\nLet me know if I can do anything to make your experience better this time. You can use the send feedback link in the navigation drawer to contact me. I personally read those messages.</string>
    <string name="reactivate_account_button">Reactivate</string>
    <string name="age_request_title">How old are you?</string>
    <string name="age_request_message">Inquiring minds want to know.\n\nTogether with gender and distance, it\'s a key decision factor for romantic partners.</string>
    <string name="age_request_legend">month/day/year</string>
    <string name="age_request_button">Save and continue</string>
    <string name="no_location_title">Where are you?</string>
    <string name="no_location_message">We can\'t match you if we don\'t know where you are.</string>
    <string name="grant_location_permission_button">Grant permission</string>
    <string name="check_location_button">Check my location</string>
    <string name="total_user_count">Total user count</string>
    <string name="active_user_count">Active user count</string>
    <string name="rating_count">Ratings count</string>
    <string name="match_count">Matches count</string>
    <string name="conversation_count">Conversations count</string>
    <string name="admin_statistics_report_duration">Report generation duration (ms)</string>
    <string name="profile_nav">Profile</string>
    <string name="rating_nav">Comparing</string>
    <string name="matches_nav">Matches</string>
    <string name="send_feedback_nav">Send feedback</string>
    <string name="about_nav">About</string>
    <string name="logout_nav">Log out</string>
    <string name="save_button_label">Save</string>
</resources>