<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="16dp"
              android:orientation="vertical">

    <TextView
        style="@style/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:labelFor="@id/birthday_edit_text"
        android:text="@string/age_request_title"/>

    <TextView
        style="@style/body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/age_request_message"/>

    <EditText
        android:id="@+id/birthday_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:hint="@string/age_request_legend"
        android:inputType="date"/>

    <Button
        android:id="@+id/birthday_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/age_request_button"/>
</LinearLayout>