<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.playposse.egoeater.activity.admin.AdminStatisticsActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/total_user_count"/>

        <TextView
            android:id="@+id/total_user_count_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="1000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/active_user_count"/>

        <TextView
            android:id="@+id/active_user_count_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="1001"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/rating_count"/>

        <TextView
            android:id="@+id/rating_count_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="1002"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/match_count"/>

        <TextView
            android:id="@+id/match_count_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="1003"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/conversation_count"/>

        <TextView
            android:id="@+id/conversation_count_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="1004"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/admin_statistics_report_duration"/>

        <TextView
            android:id="@+id/report_duration_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="432"/>
    </GridLayout>

</ScrollView>
