<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context="com.playposse.egoeater.activity.DeactivateAccountActivity">

    <LinearLayout
        android:id="@+id/pre_deactivation_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/deactivation_warning_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:text="@string/deactivate_account_warning"/>

        <EditText
            android:id="@+id/deactivation_reason_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/deactivate_account_reason"
            android:inputType="textAutoComplete|textAutoCorrect|textMultiLine"
            android:lines="5"
            android:paddingBottom="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">

            <Button
                android:id="@+id/confirmation_button"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/deactivate_account_button"/>

            <Button
                android:id="@+id/cancel_button"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/deactivate_account_cancel_button"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/confirmation_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/deactivate_account_confirmation"
        android:visibility="gone"/>
</FrameLayout>
