<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.playposse.egoeater.activity.IntroductionSlide1Fragment">

    <ImageView
        android:id="@+id/illustrationImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/introduction_graphic1"
        app:layout_marginTopPercent="10%"
        android:contentDescription="@string/get_matched_content_description" />

    <LinearLayout
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            style="@style/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:text="@string/get_matched_title"
            android:textColor="@color/primaryTextColorDark" />

        <TextView
            style="@style/body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/get_matched_body"
            android:textColor="@color/secondaryTextColorDark" />
    </LinearLayout>
</android.support.percent.PercentRelativeLayout>
